# edgedb_ssot

./: README.md  docker-compose.yml  get_movies.edgeql  get_movies_async_edgeql.py  get_people.edgeql  get_people_async_edgeql.py  main.py  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql
