[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["AndreasPB <andreas.p.brodersen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
edgedb = "^1.3.0"
httpx = {extras = ["cli"], version = "^0.23.3"}
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
